<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.epicodus.restaurants.ui.LoginActivity"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="My Restaurants"
        android:id="@+id/emailTextView"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingTop="55dp"
        android:paddingBottom="55dp"
        android:background="@color/colorTextIcons"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingLeft="10dp"
        android:paddingTop="30dp"
        android:paddingRight="10dp"
        android:paddingBottom="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/emailTextView">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="Email"
            android:textColorHint="@color/colorTextIcons"
            android:layout_marginTop="30dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="10dp"
            android:hint="Password"
            android:textColorHint="@color/colorTextIcons"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/passwordLoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Log in"
            android:background="@color/colorAccent"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorTextIcons" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Register"
            android:background="@color/colorAccent"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorTextIcons" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>