<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.epicodus.restaurants.ui.MainActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/imageView"
        android:src="@drawable/restaurants_background"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:alpha="0.7"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="My Restaurants"
        android:layout_marginTop="60dp"
        android:id="@+id/appNameTextView"
        android:textColor="@color/colorTextIcons"
        android:textSize="45sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Find Restaurants"
        android:id="@+id/findRestaurantsButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="191dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="My Saved Restaurants"
        android:id="@+id/savedRestaurantsButton"
        android:background="@color/colorAccent"
        android:textColor="@color/colorTextIcons"
        android:visibility="visible"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

</RelativeLayout>