<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_search_white_24dp"
            app:showAsAction="always"
            app:actionViewClass="android.support.v7.widget.SearchView"
            android:title="Search">
        </item>
        <item
            android:id="@+id/action_logout"
            app:showAsAction="never"
            android:title="Logout">
        </item>
</menu>